# Jules_Choice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SESSION_HANDOVER.md  comment.txt  fix_pyproject.patch  fix_pyproject_version.patch  jules_config.yaml  jules_policy.yaml  jules_self_improvement.yaml  jules_vision.yaml  pyproject.toml  pyproject.toml.orig
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: __init__.py  arbiter_agent.py  base_agent.py  catalyst_agent.py  chronicler_agent.py  consolidator_agent.py  cove_agent.py  herald_agent.py  oracle_agent.py  palette_agent.py  scout_agent.py  scribe_agent.py  sentinel_agent.py  steward_agent.py  strategist_agent.py  weaver_agent.py
config/: decision_matrix.yaml
docs/: CHANGELOG.md  _config.yml  app-manifest.json  architecture.md  gallery.md  hlf_sandbox_report.md  index.html  index.md  roadmap.md
dungeon_forge/: __init__.py  display.py  dungeon_gen.py  entities.py  game.py
governance/: host_functions.json
hlf/: hlfc.py.orig  hlfrun.py  insaits.py  insaits.py.orig  runtime.py
hlf_programs/: agent_dispatch.hlf  build_dataviz_app.hlf  decision_matrix.hlf  health_check.hlf  security_audit.hlf  sprint_report.hlf
syntaxes/: hlf.tmLanguage.json
tests/: conftest.py  test_base_agent.py  test_hlf_runner.py  test_placeholder.py  test_policy_checker.py  test_repo_health.py  test_security_scan.py
tools/: build_app_gallery.py  chart_generator.py  diagram_generator.py  goal_tracker.py  hlf_runner.py  hlf_runner.py.orig  ideation_engine.py  self_eval.py  (+8 more)
(+21 files in other folders)
