[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "tools", "hlf"]

[project]
name = "jules-sandbox"
version = "0.1.0"
description = "An open-ended autonomous AI playground"
authors = [
    { name = "Jules", email = "jules@example.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.8"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=. --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
